--- a/ui/package.json
+++ b/ui/package.json
@@ -13,8 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/d3": "^5.7.2",
+    "@types/node": "^14.14.10",
     "d3": "^5.16.0",
-    "parcel-bundler": "1.12.4",
+    "parcel-bundler": "^1.12.4",
     "typescript": "^3.9.3"
   }
 }
