--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,7 @@
   "description": "UI for the Financials App",
   "main": "src/index.html",
   "scripts": {
-    "start": "npm run build --noEmit --watch & npm run compile src/index.html",
+    "start": "npm run build --noEmit --watch & npm run compile src/index.html --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "compile": "parcel"
